--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "tsc",
     "build-list": "npm run lint && npm run build-dist",
     "build-dist": "rimraf dist/* && rollup -c",
-    "knex:migrate:make": "node -r dotenv/config ./node_modules/knex/bin/cli.js migrate:make --knexfile dist/database/knexfile.ts"
+    "knex:migrate:make": "node -r dotenv/config ./node_modules/knex/bin/cli.js migrate:make --knexfile ./src/database/knexfile.ts -x ts",
+    "knex:migrate:latest": "node -r dotenv/config ./node_modules/knex/bin/cli.js migrate:latest --knexfile ./src/database/knexfile.ts"
+
   },
   "keywords": [],
   "author": "",
