Update code style pattern

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build-dist": "rimraf dist/* && rollup -c",
     "knex:migrate:make": "node -r dotenv/config ./node_modules/knex/bin/cli.js migrate:make --knexfile ./src/database/knexfile.ts -x ts",
     "knex:migrate:latest": "node -r dotenv/config ./node_modules/knex/bin/cli.js migrate:latest --knexfile ./src/database/knexfile.ts"
-
   },
   "keywords": [],
   "author": "",
@@ -25,7 +24,8 @@
     "mysql2": "^3.3.1",
     "pg": "^8.11.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "uuid-with-v6": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^8.40.0",
