--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js",
     "dev": "npx nodemon dist/server.js",
+    "lint": "eslint . --fix --ext .ts,.js",
     "build": "tsc",
     "build-list": "npm run lint && npm run build-dist",
     "build-dist": "rimraf dist/* && rollup -c",
@@ -20,15 +21,26 @@
     "@types/node": "^20.2.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "i": "^0.3.7",
     "knex": "^2.4.2",
     "mysql2": "^3.3.1",
     "pg": "^8.11.0",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "uuid-with-v6": "^2.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-simple-import-sort": "^9.0.0",
+    "eslint-plugin-sonarjs": "^0.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
     "eslint": "^8.40.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
     "nodemon": "^2.0.22"
   }
 }
